# pylabelprinter

./: .gitignore  README.md  pylabelprinter  pyproject.toml
src/pylabelprinter/: __init__.py  __main__.py  connection.py  discovery.py  enums.py  exceptions.py  label.py  printer.py  registry.py  template.py  testlabel.py
src/pylabelprinter/printers/: __init__.py
src/pylabelprinter/printers/phomemo/: __init__.py  base.py  m120.py  m221.py  protocol.py
src/pylabelprinter/printers/zebra/: __init__.py  base.py  protocol.py  zd220.py
tests/: __init__.py  conftest.py  test_phomemo_m221.py  test_template.py  test_zebra.py
