[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylabelprinter"
version = "0.1.0"
description = "A Python library for thermal label printers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michael Wyraz"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Printing",
]
keywords = ["label", "printer", "thermal", "phomemo", "usb"]
dependencies = [
    "pillow>=9.0.0",
]

[project.optional-dependencies]
usb = ["pyusb>=1.2.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mwyraz/pylabelprinter"
Repository = "https://github.com/mwyraz/pylabelprinter"
Issues = "https://github.com/mwyraz/pylabelprinter/issues"

[project.scripts]
pylabelprinter = "pylabelprinter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
